Added REST services with configurations all done